# auto-registrar

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  BY_CRN.py  CONTRIBUTING.md  LICENSE  README.md  check_for_changes.py  check_platforms.py  cli.py  color_terminal.py  colorful_terminal.py  config.py  delay.py  errors.py  install.ps1  install.sh  main.py  old_main.py  pyproject.toml  registrar_requests.py  requirements.txt  search.py  tt.py  user_inputs.py  user_search.py
.config/: config.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.yaml  02_FEATURE_REQUEST.yaml  config.yml
.github/sample-github/: 03_CODEBASE_IMPROVEMENT.yaml  tt.sh
auto_registrar/: __main__.py  config.py  main.py  version.py
auto_registrar/tui/: ansi.py  bar.py  colored_text.py  questions.py  readchars.py
auto_registrar/universities/: kfupm.py
auto_registrar/universities/kfupm/: banner9.py  kfupm.py  registrar.py
errors/: errors.html  errors.json
scripts/: install.sh
src/: c4c.py  cli.py  config.py  main.py  registrar_courses.py  registrar_requests.py  user_search.py
